# raytracers

./: README.md
elixir/: .gitignore  Makefile  README.md  bench.exs  mix.exs
elixir/lib/: merge_sort.ex  raytracer.ex
fsharp/: .gitignore  Makefile  README.md  linux-native.sh  nuget.config  ray.fs  shell.nix  trace.fsproj
futhark/: .gitignore  Makefile  README.md  bvh.fut  futhark.pkg  main.c  prim.fut  radixtree.fut  ray  ray.c  ray.fut  shell.nix
futhark/lib/github.com/diku-dk/segmented/: segmented.fut  segmented_tests.fut
futhark/lib/github.com/diku-dk/sorts/: bubble_sort.fut  bubble_sort_tests.fut  insertion_sort.fut  insertion_sort_tests.fut  merge_sort.fut  merge_sort_tests.fut  quick_sort.fut  quick_sort_test.fut  radix_sort.fut  radix_sort_tests.fut
haskell/: BVH.hs  Image.hs  Makefile  README.md  Raytracing.hs  Scene.hs  Vec3.hs  bench-ray.hs  cabal.project  ray.cabal  ray.hs  shell.nix  stack.yaml
ispc/: shell.nix
lisp/: README.md  package.lisp  ray.asd  ray.lisp
ocaml/: .gitignore  .merlin  Makefile  README.md  _tags  ray.ml  shell.nix  timing.c
rust/: .gitignore  Cargo.toml  Makefile  README.md  shell.nix
rust/benches/: ray.rs
rust/src/: lib.rs  main.rs  sample_scenes.rs
scala/: .gitignore  Makefile  README.md  build.sbt  shell.nix
scala/project/: plugins.sbt
scala/src/main/scala/raytracer/: BVH.scala  Bench.scala  Image.scala  Main.scala  Raytracer.scala  Scene.scala  Vec3.scala
sml/: .gitignore  Makefile  ray.sml  shell.nix
