cabal-version: 2.2
name: ray
version: 1.0.0
build-type: Simple

common shared
  ghc-options: -Wall -rtsopts -threaded
  default-language: Haskell2010
  build-depends: base, parallel, array, deepseq, monad-par
  other-modules: Raytracing, Vec3, Scene, Image, BVH

executable ray
  import: shared
  main-is: ray.hs

benchmark bench-ray
  import: shared
  type: exitcode-stdio-1.0
  build-depends: criterion
  main-is: bench-ray.hs
