[package]
name = "ray"
version = "0.1.0"
authors = ["Philip Munksgaard <philip@munksgaard.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
structopt = { version = "0.2.18", features = ["paw"] }
paw = "1.0.0"

[profile.dev]
opt-level = 3
